[package]
name = "raindb"
authors = ["nerdondon"]
description = "A persistent key-value store based on an LSM tree implemented in Rust"
repository = "https://github.com/nerdondon/raindb"
version = "0.1.0"
edition = "2018"
license = "MIT"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
bincode = "1.3.0"
crc = "2.1.0"
fs2 = "0.4.3"
integer-encoding = "3.0.0"
log = "0.4"
nerdondon-hopscotch = "2.2.0"
parking_lot = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
snap = "1.0.5"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1.0.0"
