[package]
name = "raindb"
authors = ["nerdondon"]
description = "A persistent key-value store based on an LSM tree implemented in Rust"
repository = "https://github.com/nerdondon/raindb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
arc-swap = "1.5.0"
crc = "2.1.0"
fs2 = "0.4.3"
integer-encoding = "3.0.0"
log = "0.4"
nerdondon-hopscotch = { version = "2.6.0", features = ["concurrent"] }
parking_lot = "0.12.0"
snap = "1.0.5"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
# Enables strict mode i.e. tries to adhere to LevelDB binary format more and removes easter eggs.
# Strict mode is not backwards compatible with an existing database that had strict mode off.
strict = []
